2009/09/07 (TS):
 - mve_lldrv.c: Added multicast-support driver entry points.

2009/09/03 (TS):
 - lanIpBasicSetup.h: lanIpTakedown() now returns error/status code.

2009/09/03 (TS):
 - gnreth_lldrv.h: Added multicast-support driver entry points.

2009/09/03 (TS):
 - e1k_lldrv.c:
    o Added comments explaining e1000_mta_clr() function (which parallels
      intel's e1000_mta_set() and which is needed to remove a single
      MC hash from filter.
    o Implemented multicast support functions.

2009/09/03 (TS):
 - drvGnrIpBasic.c:
    o Added support for adding/removing MC addresses from multicast
      filter.
    o Use new convenience-wrappers (bsem_create, task_spawn, ...) for
      semaphore and task creation.
    o Use new 'task_pseudojoin' facility to synchronize with driver
      task termination.

2009/09/03 (TS):
 - drvAmdEthIpBasic.c:
    o Do 2-byte adjustment of buffer start address
      in 'amd_send_buf_locked()'. amd_send_buf_locked() can now use
      'split-packets' where a UDP header and payload are stored in
      separate buffers.
    o Use new convenience-wrappers (bsem_create, task_spawn, ...) for
      semaphore and task creation.
    o Use new API (amdeth.h) for amdEthCloseDev() providing a 'cleanup'
      callback which releases buffers present in the rings when the
      driver is shut down.
    o Use new 'task_pseudojoin' facility to synchronize with driver
      task termination.

2009/08/29 (TS):
 - drvLan9118.c: create a semaphore and block until driver task exits
   when shutting-down the driver.

2009/08/27 (TS):
 - drvLan9118.h, drvLan9118.c, drvLan9118IpBasic.c: Added support for
   multicast.

2009/08/24 (TS):
 - e1k_lldrv.c:
    o added 'e1000_mta_clr()' routine which is analogous to intel driver's
      'e1000_mta_set()' and can be used to reset an individual bit in the
      multicast filter. This routine might need to be updated if a new
	  intel driver version is ported.